# Seto

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  build.zig  build.zig.zon  build.zig.zon2json-lock  default.nix  deps.nix  flake.nix  run_tests.sh  seto.1.scd  zls.json
completions/: _seto  seto.bash  seto.fish
doc/: seto.1.scd  seto.5.scd
examples/: flake.nix  move-mouse.nix  move_mouse.sh  screenshot.nix  screenshot.sh
nix/: dawn.nix  default.nix  deps.nix  home-manager.nix  package.nix  stylix.nix
src/: Color.zig  Config.zig  Egl.zig  EventLoop.zig  Output.zig  State.zig  Text.zig  Timer.zig  Tree.zig  cli.zig  config.zig  egl.zig  ffi.zig  helpers.zig  main.rs  main.zig  math.zig  output.rs  seat.rs  seat.zig  shader.wgsl  surface.zig  tree.zig  wgpu_state.rs
src/Tree/: BorderTree.zig  NormalTree.zig  Trees.zig
src/config/: Font.zig  Grid.zig  Keys.zig  Text.zig
src/output/: wgpu_surface.rs
src/shaders/: fragment_shader.glsl  main.frag  main.vert  text.frag  text.vert  vertex_shader.glsl
src/shaders/main/: solid.frag  solid.vert
src/shaders/text/: gradient.vert  solid.frag  solid.vert  triple_gradient.frag  triple_gradient.vert
tests/: config.lua  format.sh  integration.zig  move.sh  region.sh  resize.sh  single.sh
zig/b/44b63e7bd8b01ae583699a866dd3627f/: builtin.zig
zig/b/520adcf5cfca046a1963a9b51bfab4fd/: builtin.zig
zig/b/89a2f149ebf586364be917957584b897/: builtin.zig
zig/b/8dbe8bf5dc45451e8f168a47cc06b19e/: builtin.zig
zig/b/b39096790ad1d191bd6af31dda30779b/: builtin.zig
(+11 files in other folders)
